added pip install dbt on docker entry point

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -180,6 +180,7 @@ services:
         mkdir -p /sources/logs /sources/dags /sources/plugins
         chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
         exec /entrypoint airflow version
+      - pip install dbt-postgres
     # yamllint enable rule:line-length
     environment:
       <<: *airflow-common-env
